--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.6.
 % Encoding: Cp1252
 
 @ARTICLE{almon1965,
@@ -61,7 +61,9 @@
   title = {{Distributed lag non-linear models}},
   journal = {Statistics in Medicine},
   year = {2010},
-  pages = {Epub ahead of print May 7. DOI: 10.1002/sim.3940}
+  volume = {29},
+  pages = {2224-2234},
+  number = {21}
 }
 
 @ARTICLE{hajat2005,
