--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -181,7 +181,7 @@ The value returned by \Rfun{mkbasis} and \Rfun{mklagbasis} is a list object, who
 
 This is the main function in the package \Rpkg{dlnm}. It calls the internal functions \Rfun{mkbasis} and \Rfun{mklagbasis} and combines the two basis matrices through a tensor product in order to create the cross-basis, which specifies the dependency simultaneously in the two dimensions. See \citet[Section 4.1~-~4.2]{gasparrini2010statmed} for details. Its first argument is \Rarg{x}, assumed to represent an equally-spaced, complete and ordered series of observations, in order for the function to be coherently applied.
 
-The function uses arguments \Rarg{df}-\Rarg{knots}-\Rarg{bound}-\Rarg{degree}-\Rarg{int}-\Rarg{cen}-\Rarg{cenvalue}-\Rarg{maxlag}, with specific (optional) prefix \Rcode{var}- or \Rcode{lag}- to pass them to \Rfun{mkbasis} or \Rfun{mklagbasis}, respectively (see Section~\ref{sec:internal}, and type \Rcomm{?crossbasis} for a complete list of the arguments). The additional argument \Rarg{group} defines groups of observations to be considered as individual unrelated series, and may be useful for example in seasonal analyses (see Section~\ref{sec:example2}).
+The function uses arguments \Rarg{df}-\Rarg{knots}-\Rarg{bound}-\Rarg{degree}-\Rarg{int}-\Rarg{cen}-\Rarg{cenvalue}-\Rarg{maxlag}, with specific (optional) prefix \Rcode{var}- or \Rcode{lag}- to pass them to \Rfun{mkbasis} or \Rfun{mklagbasis}, respectively (see Section~\ref{sec:internal}, and type \Rcomm{?crossbasis} for a complete list of the arguments). The additional argument \Rarg{group} defines groups of observations to be considered as individual unrelated series, and may be useful for example in seasonal analyses (see Section~\ref{sec:example2}). In this case, each series must be consecutive, complete and ordered.
 
 The function returns an object of class \Rclass{crossbasis}, together with attributes defining the choices for the two basis functions. The arguments are set to some default values, and can be automatically changed for nonsensical combinations, or set to null if not required. Meaningless combinations of arguments (for example knots defined outside the predictor range) could lead to collinear variables, with identifiability problems in the model. The function applies some coherence checks and fix some specific problem (for example discarding strata intervals where no observation lies), but other problem may arise. The user is advised to test the result with the function \Rfun{summary.crossbasis}, which provides a summary of the choices made for the two bases and the final cross-basis.
 
@@ -379,7 +379,7 @@ basis.temp <- crossbasis(chicagoNMMAPSseas$temp, group=chicagoNMMAPSseas$year,
 	maxlag=10)
 @
 
-The argument \Rarg{group} indicates the variable which defines multiple series: the function then breaks the series at the end of each group and replaces the first \Rcode{maxlag} rows of the cross-basis matrix in the following series with \Rcode{NA}. Here we make the assumption that the effect of \ozone{} is null up to 40.3 \microg{} and then linear, applying an high threshold parameterization. For temperature, we use a double threshold with the assumption that the effect is linear below 10\Ctemp{} and above 25\Ctemp{}, and null in between. Regarding the lag dimension, we specify an unconstrained function for \ozone{}, applying one parameter for each lag (\Rarg{lagtype="integer"}) up to a 5 days. For temperature, we define 3 strata intervals at lag 0-1, 2-5, 6-10. A summary of the choices made for the cross-bases can be shown by the function \Rfun{summary.crossbasis}.
+The argument \Rarg{group} indicates the variable which defines multiple series: the function then breaks the series at the end of each group and replaces the first \Rcode{maxlag} rows of the cross-basis matrix in the following series with \Rcode{NA}. Each series must be consecutive, complete and ordered. Here we make the assumption that the effect of \ozone{} is null up to 40.3 \microg{} and then linear, applying an high threshold parameterization. For temperature, we use a double threshold with the assumption that the effect is linear below 10\Ctemp{} and above 25\Ctemp{}, and null in between. Regarding the lag dimension, we specify an unconstrained function for \ozone{}, applying one parameter for each lag (\Rarg{lagtype="integer"}) up to a 5 days. For temperature, we define 3 strata intervals at lag 0-1, 2-5, 6-10. A summary of the choices made for the cross-bases can be shown by the function \Rfun{summary.crossbasis}.
 
 The regression model includes a natural spline for day of the year (with 4 df) in order to describe the seasonal effect within each year. Apart from that, the estimates and predictions are carried out in the same way as in Section~\ref{sec:example1}. The code is:
 
