--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,13 @@
+Changes in dlnm 1.3.2
+=======================
+
+Minor changes
+-------------
+
+    o	Argument 'group' of crossbasis() forced to define consecutive
+	series. Documentation changed accordingly.
+
+
 Changes in dlnm 1.3.1
 =======================
 
