--- a/inst/doc/dlnmOverview.Rnw
+++ b/inst/doc/dlnmOverview.Rnw
@@ -165,7 +165,7 @@ The internal functions \Rfun{mkbasis} and \Rfun{mklagbasis} are called in order 
 
 The main function in the package \Rpkg{dlnm} is \Rfun{crossbasis}. It calls the internal functions \Rfun{mkbasis} and \Rfun{mklagbasis} and combines the two basis matrices in order to create the cross-basis matrix which specifies the dependency simultaneously in the two dimensions. The arguments are set to some default values, and can be automatically changed for nonsensical combinations, or set to null if not required. Anyway, meaningless combinations of arguments (for example strata where no observation lies) could lead to collinear variables, with identifiability problems in the model. The user is advised to test the result with the function \Rfun{summary.crossbasis}, which provides a summary of the choices made for the two bases and the final cross-basis.
 
-The cross-basis matrix should be included in the model formula of default regression functions. More than one cross-basis matrix can be included in the same formula. The name of the object containing the cross-basis matrix will be used to extract the estimated parameters, and must not match the names of other predictors in the model formula. Several different regression commands can be used: \Rfun{lm}, \Rfun{glm}, \Rfun{gam} (package \Rpkg{mgcv}), \Rfun{gee} (package \Rpkg{geepack}), \Rfun{clogit} and \Rfun{coxph} (package \Rpkg{survival}). Other commands may be included in the future.
+The cross-basis matrix should be included in the model formula of default regression functions. More than one cross-basis matrix can be included in the same formula. The name of the object containing the cross-basis matrix will be used to extract the estimated parameters, and must not match the names of other predictors in the model formula. Several different regression commands can be used: \Rfun{lm}, \Rfun{glm}, \Rfun{gam} (package \Rpkg{mgcv}), \Rfun{glm.nb} (package \Rpkg{MASS}), \Rfun{gee} (package \Rpkg{geepack}), \Rfun{clogit} and \Rfun{coxph} (package \Rpkg{survival}). Other commands may be included in the future.
 
 The function \Rfun{crosspred} generates the predicted effects for a set of values of the original predictor, given the applied cross-basis functions and the parameters estimated by the model. It stores them in matrices with specific effects for each combination of predictor values and lags, and in vectors of overall effects (summed up along lags). Cumulative effects may be included, and exponentiated values are returned for model with log or logit link.
 
