--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,16 @@
+Changes in dlnm 1.2.1
+=======================
+
+Minor changes
+-------------
+
+    o	Bug in crosspred() with cumul=T: fixed.
+
+    o	Error in regression commands for crosspred(): fixed.
+
+    o	Help pages and citation changed accordingly.
+
+
 Changes in dlnm 1.2.0
 =======================
 
