--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -69,7 +69,9 @@
   title = {{Distributed lag non-linear models}},
   journal = {Statistics in Medicine},
   year = {2010},
-  number = {In Press}
+  pages = {Epub ahead of print May 7. DOI: 10.1002/sim.3940},
+  owner = {ppehagas},
+  timestamp = {2010.05.27}
 }
 
 @ARTICLE{hajat2005,
