--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,12 @@
+Changes in dlnm 1.2.3
+=======================
+
+Minor changes
+-------------
+
+    o	Updated reference.
+
+
 Changes in dlnm 1.2.2
 =======================
 
