--- a/inst/doc/biblioVignette.bib
+++ b/inst/doc/biblioVignette.bib
@@ -56,22 +56,12 @@
   number = {1}
 }
 
-@MANUAL{dlnmpackage,
-  title = {dlnm: Distributed Lag Non-linear Models in R},
-  author = {Gasparrini, A and Armstrong, B},
-  year = {2009},
-  note = {R package version 1.1.1},
-  url = {http://cran.r-project.org/web/packages/dlnm/index.html}
-}
-
 @ARTICLE{gasparrini2010statmed,
   author = {Gasparrini, A. and Armstrong, B. and Kenward, M. G.},
   title = {{Distributed lag non-linear models}},
   journal = {Statistics in Medicine},
   year = {2010},
-  pages = {Epub ahead of print May 7. DOI: 10.1002/sim.3940},
-  owner = {ppehagas},
-  timestamp = {2010.05.27}
+  pages = {Epub ahead of print May 7. DOI: 10.1002/sim.3940}
 }
 
 @ARTICLE{hajat2005,
