--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,12 @@
+Changes in dlnm 1.2.4
+=======================
+
+Major changes
+-------------
+
+    o	mkbasis substantially revised: now 'int' unrelated to df,
+	then relation 'type'-'df'-'int' more logical.
+
 Changes in dlnm 1.2.3
 =======================
 
